[gd_scene load_steps=4 format=3 uid="uid://c34ogts7emso"]

[ext_resource type="Script" path="res://scripts/ui/win_screen.gd" id="1_jym21"]
[ext_resource type="PackedScene" uid="uid://b1yqpo8uosw1n" path="res://scenes/ui/buttons/menu_button.tscn" id="2_y4jbx"]

[sub_resource type="LabelSettings" id="LabelSettings_8211j"]
font_size = 70
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jym21")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.470588, 0.470588, 0.313726)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="WinnerLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_8211j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReplayButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Replay
Game"
flat = true

[node name="MenuButton" parent="MarginContainer" instance=ExtResource("2_y4jbx")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Return on
Main Menu"
_menu_name = "start_menu"
